[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/CeransDev/CollisionUI.gd" type="Script" id=1]

[node name="Dev" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.0
margin_right = 127.0
margin_bottom = 290.0

[node name="VSplitContainer2" type="VSplitContainer" parent="CenterContainer"]
margin_left = 23.0
margin_right = 186.0
margin_bottom = 336.0

[node name="VSplitContainer" type="VSplitContainer" parent="CenterContainer/VSplitContainer2"]
margin_right = 163.0
margin_bottom = 336.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VSplitContainer2/VSplitContainer"]
margin_right = 163.0
margin_bottom = 262.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_right = 163.0
margin_bottom = 14.0
text = "Collision Management"

[node name="Create" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
visible = false
margin_top = 18.0
margin_right = 166.0
margin_bottom = 38.0
text = "Create for selected only"

[node name="Createall" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
visible = false
margin_top = 18.0
margin_right = 166.0
margin_bottom = 38.0
text = "Create collisions for all "

[node name="LG_scale" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 163.0
margin_bottom = 38.0
toggle_mode = true
text = "Light Scale Down/Up"

[node name="BL_scale" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 163.0
margin_bottom = 62.0
toggle_mode = true
text = "Baklight BBox scale"

[node name="BL_save" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 163.0
margin_bottom = 86.0
toggle_mode = true
text = "Save BakedLight Data"

[node name="ListGrp" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 163.0
margin_bottom = 110.0
hint_tooltip = "print statistics about grous in scenes, so as overall groups"
toggle_mode = true
text = "List Groups"

[node name="CS_list" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 163.0
margin_bottom = 134.0
toggle_mode = true
text = "List Collision shapes"

[node name="CS_make" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 163.0
margin_bottom = 158.0
toggle_mode = true
text = "Make Collision shapes"

[node name="CS_delete" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 163.0
margin_bottom = 182.0
toggle_mode = true
text = "Delete Collision shapes"

[node name="CS_save" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 186.0
margin_right = 163.0
margin_bottom = 206.0
toggle_mode = true
text = "Save Collision shapes"

[node name="opt_selected" type="CheckBox" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 163.0
margin_bottom = 234.0
hint_tooltip = "apply action only to selected objects"
text = "Only Selected"

[node name="opt_recurent" type="CheckBox" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 163.0
margin_bottom = 262.0
hint_tooltip = "apply action to onle current scene or to all child scenes"
text = "All sub scenes"

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VSplitContainer2/VSplitContainer"]
margin_top = 274.0
margin_right = 163.0
margin_bottom = 336.0
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer2"]
margin_right = 163.0
margin_bottom = 14.0
text = "Danger zone"

[node name="Delete" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer2"]
visible = false
margin_top = 18.0
margin_right = 166.0
margin_bottom = 38.0
text = "Delete for selected only"

[node name="Deleteall" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer2"]
visible = false
margin_top = 42.0
margin_right = 166.0
margin_bottom = 62.0
text = "Delete collisions for all "

[node name="Tree" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer2"]
visible = false
margin_top = 66.0
margin_right = 166.0
margin_bottom = 86.0
text = "Print all tree"

[node name="Reload" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 163.0
margin_bottom = 38.0
hint_tooltip = "Reload scripts"
text = "Reload"

[node name="Run" type="Button" parent="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer2"]
margin_top = 42.0
margin_right = 163.0
margin_bottom = 62.0
hint_tooltip = "run test function"
text = "Test run"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VSplitContainer2"]
visible = false
margin_top = 172.0
margin_right = 166.0
margin_bottom = 290.0

[node name="Label" type="Label" parent="CenterContainer/VSplitContainer2/VBoxContainer"]
margin_right = 166.0
margin_bottom = 14.0
text = "Plugin Output"

[node name="Panel" type="Panel" parent="CenterContainer/VSplitContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 166.0
margin_bottom = 118.0
rect_min_size = Vector2( 100, 100 )

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VSplitContainer2/VBoxContainer/Panel"]
margin_top = 4.0
margin_right = 166.0
margin_bottom = 104.0
rect_min_size = Vector2( 100, 100 )
text = "
"

[node name="WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -20.0
margin_right = 60.0
margin_bottom = 20.0
window_title = "Click!"

[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer/LG_scale" to="." method="_on_LG_scale_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer/BL_scale" to="." method="_on_BL_scale_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer/BL_save" to="." method="_on_BL_save_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer/ListGrp" to="." method="_on_ListGrp_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer/CS_list" to="." method="_on_CS_list_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer/CS_make" to="." method="_on_CS_make_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer/CS_delete" to="." method="_on_CS_delete_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer/CS_save" to="." method="_on_CS_save_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer2/Tree" to="." method="_on_Tree_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer2/Reload" to="." method="_on_Reload_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer2/VSplitContainer/VBoxContainer2/Run" to="." method="_on_Run_pressed"]
